[tool.poetry]
name = "starknet-py"
version = "0.17.1"
description = "A python SDK for Starknet"
authors = ["Tomasz Rejowski <tomasz.rejowski@swmansion.com>", "Jakub Ptak <jakub.ptak@swmansion.com>"]
include = ["starknet_py", "starknet_py/utils/crypto/libcrypto_c_exports.*"]
exclude = ["starknet_py/tests/*", "starknet_py/**/*_test.py"]
packages = [
    { include = "starknet_py" }
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/software-mansion/starknet.py"
documentation = "https://starknetpy.rtfd.io/"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
asgiref = "^3.4.1"
marshmallow = "^3.15.0"
marshmallow-oneofschema = "^3.0.1"
typing-extensions = "^4.3.0"
marshmallow-dataclass = "<8.5.0"
poseidon-py = "^0.1.3"
lark = "^1.1.5"
aiohttp = "^3.8.4"
sphinx = { version = ">=4.3.1,<8.0.0", optional = true }
enum-tools = { extras = ["sphinx"], version = "0.10.0", optional = true }
furo = { version = "^2023.5.20", optional = true }
pycryptodome = "^3.17"
crypto-cpp-py = "^1.4.0"

[tool.poetry.extras]
docs = ["sphinx", "enum-tools", "furo"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
poethepoet = "^0.21.1"
coverage = "^7.2.1"
pytest-asyncio = "^0.21.1"
pylint = "2.17.4"
setuptools = "^68.0.0"
pytest-mock = "^3.6.1"
pytest-xdist = "^3.2.1"
pyright = "^1.1.298"
pytest-cov = "^4.0.0"
isort = "^5.11.4"
pytest-rerunfailures = "^12.0"


[tool.poetry.group.py39-dev.dependencies]
cairo-lang = { version = "0.12.0", python= ">=3.9, <3.10" }
starknet-devnet = { version = "0.5.5", python= ">=3.9, <3.10" }

[tool.poe.tasks]
test.shell = "pytest -n auto -v --reruns 10 --only-rerun aiohttp.client_exceptions.ClientConnectorError --cov=starknet_py starknet_py"

test_ci = ["test_ci_gateway_v1", "test_ci_full_node_v1", "test_ci_gateway_v2", "test_ci_full_node_v2"]
test_ci_gateway_v1.shell = "coverage run -m pytest --client=gateway --contract_dir=v1 -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError starknet_py --ignore=starknet_py/tests/e2e/docs --ignore=starknet_py/tests/e2e/core"
test_ci_full_node_v1.shell = "coverage run -m pytest --client=full_node --contract_dir=v1 -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError starknet_py --ignore=starknet_py/tests/e2e/docs --ignore=starknet_py/tests/e2e/core"
test_ci_gateway_v2.shell = "coverage run -m pytest --client=gateway --contract_dir=v2 -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError starknet_py --ignore=starknet_py/tests/e2e/docs --ignore=starknet_py/tests/e2e/core"
test_ci_full_node_v2.shell = "coverage run -m pytest --client=full_node --contract_dir=v2 -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError starknet_py --ignore=starknet_py/tests/e2e/docs --ignore=starknet_py/tests/e2e/core"

test_ci_docs = ["test_ci_docs_gateway_v1", "test_ci_docs_full_node_v1", "test_ci_docs_gateway_v2", "test_ci_docs_full_node_v2"]
test_ci_docs_gateway_v1.shell = "coverage run -m pytest --client=gateway --contract_dir=v1 -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError starknet_py/tests/e2e/docs"
test_ci_docs_full_node_v1.shell = "coverage run -m pytest --client=full_node --contract_dir=v1 -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError starknet_py/tests/e2e/docs"
test_ci_docs_gateway_v2.shell = "coverage run -m pytest --client=gateway --contract_dir=v2 -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError starknet_py/tests/e2e/docs"
test_ci_docs_full_node_v2.shell = "coverage run -m pytest --client=full_node --contract_dir=v2 -v --reruns 5 --only-rerun aiohttp.client_exceptions.ClientConnectorError starknet_py/tests/e2e/docs"

test_unit.shell = "pytest -n auto -v starknet_py --ignore=starknet_py/tests/e2e"
test_e2e.shell = "pytest -n auto -v starknet_py/tests/e2e --ignore=starknet_py/tests/e2e/docs"
test_docs.shell = "pytest -n auto -v starknet_py/tests/e2e/docs"
test_core.shell = "pytest -v starknet_py/tests/e2e/core --net=integration"
test_report.shell = "coverage report"
test_html.shell = "coverage html && open ./htmlcov/index.html"
docs_create = { shell = "make -C docs html" }
docs_open = { shell = "open docs/_build/html/index.html" }
lint = "pylint starknet_py"
format.shell = "isort . && black ."
format_check.shell = "isort --check . && black --check ."
format_diff.shell = "isort --diff . && black --diff ."
typecheck = "pyright starknet_py"
compile_contracts = "bash starknet_py/tests/e2e/mock/compile_contracts.sh"
compile_contracts_v1 = "bash starknet_py/tests/e2e/mock/compile_contracts_v1.sh"
compile_contracts_v2 = "bash starknet_py/tests/e2e/mock/compile_contracts_v2.sh"
circular_imports_check.shell = "poetry run pytest circular.py"
ci = ["lint", "format_check", "typecheck", "test_ci"]
precommit.sequence = ["format", "lint", "typecheck"]
precommit.ignore_fail = true

[tool.poetry.build]
generate-setup-file = true

[tool.coverage.run]
source = ["starknet_py"]


[tool.coverage.report]
omit = ["*_test.py", "starknet_py/tests/e2e/*", "starknet_py/utils/docs.py"]
skip_empty = true


[build-system]
requires = [
    "setuptools",
    "wheel",
    "build",
    "Cython",
]

build-backend = "setuptools.build_meta"


[tool.black]
target-version = ["py38"]
extend-exclude = """
crypto-cpp
"""

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
markers = [
    "run_on_testnet: marks test that will only run on testnet (when --net=testnet)",
    "run_on_devnet: marks test that will only run on devnet (when --net=devnet)"
]

[tool.pyright]
include = ["starknet_py/"]
exclude = [
    "**/__pycache__",
    "starknet_py/tests/e2e/docs",
]
stubPath = ""  # fix "not a valid directory" error
