[tool.poetry]
name = "starknet-py"
version = "0.19.0"
description = "A python SDK for Starknet"
authors = ["Tomasz Rejowski <tomasz.rejowski@swmansion.com>", "Jakub Ptak <jakub.ptak@swmansion.com>"]
include = ["starknet_py", "starknet_py/utils/crypto/libcrypto_c_exports.*"]
exclude = ["starknet_py/tests/*", "starknet_py/**/*_test.py"]
packages = [
    { include = "starknet_py" }
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/software-mansion/starknet.py"
documentation = "https://starknetpy.rtfd.io/"

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
asgiref = "^3.4.1"
marshmallow = "^3.15.0"
marshmallow-oneofschema = "^3.0.1"
typing-extensions = "^4.3.0"
marshmallow-dataclass = "<8.7.0"
poseidon-py = "^0.1.3"
lark = "^1.1.5"
aiohttp = "^3.8.4"
sphinx = { version = ">=4.3.1,<8.0.0", optional = true }
enum-tools = { extras = ["sphinx"], version = "0.11.0", optional = true }
furo = { version = "^2023.5.20", optional = true }
pycryptodome = "^3.17"
crypto-cpp-py = "^1.4.0"

[tool.poetry.extras]
docs = ["sphinx", "enum-tools", "furo"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
poethepoet = "^0.24.4"
coverage = "^7.2.1"
pytest-asyncio = "^0.21.1"
pylint = "3.0.3"
setuptools = "^69.0.3"
pytest-mock = "^3.6.1"
pytest-xdist = "^3.2.1"
pyright = "1.1.338"
pytest-cov = "^4.0.0"
isort = "^5.11.4"
pytest-rerunfailures = "^13.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.py39-dev.dependencies]
cairo-lang = {version = "0.13.0", python = ">=3.9, <3.10"}

[tool.poe.tasks]
test = [
    "clean_coverage",
    "test_ci_v1 --disable-warnings -qq",
    "test_ci_v2 --disable-warnings -qq",
    "test_ci_on_networks --disable-warnings -qq",
    "test_ci_docs_v1 --disable-warnings -qq",
    "test_ci_docs_v2 --disable-warnings -qq",
    "test_report --skip-covered"
]

test_ci = ["test_ci_v1", "test_ci_v2"]
test_ci_v1 = "coverage run -a -m pytest --contract_dir=v1 starknet_py --ignore=starknet_py/tests/e2e/docs --ignore=starknet_py/tests/e2e/tests_on_networks"
test_ci_v2 = "coverage run -a -m pytest --contract_dir=v2 starknet_py --ignore=starknet_py/tests/e2e/docs --ignore=starknet_py/tests/e2e/tests_on_networks"

test_ci_on_networks = "coverage run -a -m pytest starknet_py/tests/e2e/tests_on_networks"

test_ci_docs = ["test_ci_docs_v1", "test_ci_docs_v2"]
test_ci_docs_v1 = "coverage run -a -m pytest --contract_dir=v1 starknet_py/tests/e2e/docs"
test_ci_docs_v2 = "coverage run -a -m pytest --contract_dir=v2 starknet_py/tests/e2e/docs"

test_report = "coverage report -m"
test_html.shell = "coverage html && open ./htmlcov/index.html"
clean_coverage = "coverage erase"
docs_create = { shell = "make -C docs html" }
docs_open = { shell = "open docs/_build/html/index.html" }
lint = "pylint starknet_py"
format.shell = "isort . && black ."
format_check.shell = "isort --check . && black --check ."
format_diff.shell = "isort --diff . && black --diff ."
typecheck = "pyright starknet_py"
compile_contracts = "bash starknet_py/tests/e2e/mock/compile_contracts.sh"
compile_contracts_v1 = "bash starknet_py/tests/e2e/mock/compile_contracts_v1.sh"
compile_contracts_v2 = "bash starknet_py/tests/e2e/mock/compile_contracts_v2.sh"
circular_imports_check.shell = "poetry run pytest circular.py"
ci = ["lint", "format_check", "typecheck", "test_ci"]
precommit.sequence = ["format", "lint", "typecheck"]
precommit.ignore_fail = true

[tool.poetry.build]
generate-setup-file = true

[tool.coverage.run]
source = ["starknet_py"]


[tool.coverage.report]
omit = ["*_test.py", "test_*.py", "starknet_py/tests/*"]
skip_empty = true


[build-system]
requires = [
    "setuptools",
    "wheel",
    "build",
    "Cython",
]

build-backend = "setuptools.build_meta"


[tool.black]
target-version = ["py38"]
extend-exclude = """
crypto-cpp
"""

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--reruns=5",
    "--only-rerun=aiohttp.client_exceptions.ClientConnectorError"
]
markers = [
    "run_on_testnet: marks test that will only run on testnet (when --net=testnet)",
    "run_on_devnet: marks test that will only run on devnet (when --net=devnet)"
]

[tool.pyright]
include = ["starknet_py/"]
exclude = [
    "**/__pycache__",
    "starknet_py/tests/e2e/docs",
]
stubPath = ""  # fix "not a valid directory" error
