[project]
name = "starknet-py"
version = "0.28.0-rc.0"
description = "A python SDK for Starknet"
authors = [
    { name = "Tomasz Rejowski", email = "tomasz.rejowski@swmansion.com" },
    { name = "Jakub Ptak", email = "jakub.ptak@swmansion.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9, <3.13"
dependencies = [
    "asgiref>=3.4.1,<4.0.0",
    "marshmallow>=3.15.0,<4.0.0",
    "marshmallow-oneofschema>=3.1.1,<4.0.0",
    "typing-extensions>=4.3.0,<5.0.0",
    "marshmallow-dataclass<8.8.0",
    "poseidon-py==0.1.5",
    "lark>=1.1.5,<2.0.0",
    "aiohttp>=3.8.4,<4.0.0",
    "pycryptodome>=3.17,<4.0",
    "crypto-cpp-py==1.4.5",
    "eth-keyfile>=0.8.1,<1.0.0",
    "websockets>=15.0.1,<16.0.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=4.3.1,<8.0.0",
    "enum-tools[sphinx]==0.12.0",
    "furo>=2024.5.6,<2025.0.0",
]
ledger = [
    "ledgerwallet>=0.5.0,<1.0.0",
]

[project.urls]
documentation = "https://starknetpy.rtfd.io/"
repository = "https://github.com/software-mansion/starknet.py"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
poethepoet = "^0.27.0"
coverage = "^7.2.1"
pytest-asyncio = "^0.21.1"
pylint = "3.2.5"
pytest-mock = "^3.6.1"
pytest-xdist = "^3.2.1"
pyright = "1.1.402"
pytest-cov = "^5.0.0"
isort = "^5.11.4"
pytest-rerunfailures = "^14.0"
python-dotenv = "^1.0.0"
setuptools = "^70.3.0"

[tool.poetry]
exclude = ["starknet_py/tests/*", "starknet_py/**/*_test.py"]
include = ["starknet_py", "starknet_py/utils/crypto/libcrypto_c_exports.*"]
packages = [
    { include = "starknet_py" }
]

[tool.poe.tasks]
test = [
    "clean_coverage",
    "test_ci_v1 --disable-warnings -qq",
    "test_ci_v2 --disable-warnings -qq",
    "test_ci_on_networks --disable-warnings -qq",
    "test_ci_docs_v1 --disable-warnings -qq",
    "test_ci_docs_v2 --disable-warnings -qq",
    "test_report --skip-covered"
]

test_ci = ["test_ci_v1", "test_ci_v2"]
test_ci_v1 = "coverage run -a -m pytest -n auto --contract_dir=v1 starknet_py --ignore=starknet_py/tests/e2e/docs --ignore=starknet_py/tests/e2e/tests_on_networks"
test_ci_v2 = "coverage run -a -m pytest -n auto --contract_dir=v2 starknet_py --ignore=starknet_py/tests/e2e/docs --ignore=starknet_py/tests/e2e/tests_on_networks"

test_ci_on_networks = "coverage run -a -m pytest --contract_dir=v2 starknet_py/tests/e2e/tests_on_networks"

test_ci_docs = ["test_ci_docs_v1", "test_ci_docs_v2"]
test_ci_docs_v1 = "coverage run -a -m pytest -n auto --contract_dir=v1 starknet_py/tests/e2e/docs"
test_ci_docs_v2 = "coverage run -a -m pytest -n auto --contract_dir=v2 starknet_py/tests/e2e/docs"

test_report = "coverage report -m"
test_html.shell = "coverage html && open ./htmlcov/index.html"
clean_coverage = "coverage erase"
docs_create = { shell = "make -C docs html" }
docs_open = { shell = "open docs/_build/html/index.html" }
lint = "pylint starknet_py"
format.shell = "isort . && black ."
format_check.shell = "isort --check . && black --check ."
format_diff.shell = "isort --diff . && black --diff ."
typecheck = "pyright starknet_py"
compile_contracts = "bash starknet_py/tests/e2e/mock/compile_contracts.sh"
circular_imports_check.shell = "poetry run pytest circular.py"
ci = ["lint", "format_check", "typecheck", "test_ci"]
precommit.sequence = ["format", "lint", "typecheck"]
precommit.ignore_fail = true

[tool.poetry.build]
generate-setup-file = true

[tool.coverage.run]
source = ["starknet_py"]


[tool.coverage.report]
omit = ["*_test.py", "test_*.py", "starknet_py/tests/*"]
skip_empty = true


[build-system]
requires = [
    "setuptools",
    "wheel",
    "build",
    "Cython",
]

build-backend = "setuptools.build_meta"


[tool.black]
target-version = ["py38"]
extend-exclude = """
crypto-cpp
"""

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--reruns=5",
    "--only-rerun=aiohttp.client_exceptions.ClientConnectorError"
]
markers = [
    "run_on_testnet: marks test that will only run on testnet (when --net=testnet)",
    "run_on_devnet: marks test that will only run on devnet (when --net=devnet)"
]

[tool.pyright]
include = ["starknet_py/"]
exclude = [
    "**/__pycache__",
    "starknet_py/tests/e2e/docs",
]
